--- a/sneer/build.xml
+++ b/sneer/build.xml
@@ -5,6 +5,10 @@
 	<property name="java.awt.headless" value="true" />
 	<property name="builder.project" value="antlips" />
 	
+	<target name="hudson-clover" depends="clean, antlips.xml">
+		<ant inheritall="true" antfile="antlips.xml" target="testWithClover" />
+	</target>
+	
 	<target name="hudson" depends="clean, antlips.xml">
 		<ant inheritall="true" antfile="antlips.xml" target="test" />
 	</target>
