--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -10,12 +10,11 @@
 	<classpathentry kind="lib" path="spikes/lib/Filters.jar"/>
 	<classpathentry kind="lib" path="spikes/lib/lucene-demos-2.3.2.jar"/>
 	<classpathentry kind="lib" path="spikes/lib/asm-all-3.1.jar"/>
-	<classpathentry kind="lib" path="spikes/lib/xstream-1.2.2.jar"/>
 	<classpathentry kind="lib" path="spikes/lib/javassist.jar"/>
 	<classpathentry kind="lib" path="spikes/src/spikes/sneer/pulp/things/impl/lib/lucene-core-2.3.2.jar"/>
 	<classpathentry kind="lib" path="spikes/src/spikes/sandro/swing/layers/lib/jxlayer.jar"/>
-	<classpathentry kind="lib" path="bricks/src/sneer/pulp/tuples/impl/lib2/prevayler-2.3.jar" sourcepath="bricks/src/sneer/pulp/tuples/impl/lib2/prevayler-2.3.src.zip"/>
-	<classpathentry kind="lib" path="bricks/src/snapps/wind/impl/lib/xpp3_min-1.1.3_8.jar"/>
+	<classpathentry kind="lib" path="bricks/src/sneer/pulp/tuples/impl/lib/prevayler-2.3.jar" sourcepath="bricks/src/sneer/pulp/tuples/impl/lib/prevayler-2.3-src.zip"/>
+	<classpathentry kind="lib" path="bricks/src/sneer/pulp/tuples/impl/lib/xstream-1.3.1.jar" sourcepath="bricks/src/sneer/pulp/tuples/impl/lib/xstream-1.3.1-src.zip"/>
 	<classpathentry kind="lib" path="bricks/src/snapps/whisper/speex/impl/lib/speex.jar"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/pulp/crypto/impl/lib/bcprov-jdk16-139.jar"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/software/code/compilers/java/impl/lib/compiler-7-ea-b17-02_aug_2007.jar"/>
