--- a/sneer/antlips/src/antlips/antFileGenerator/source-folders-separate.template
+++ b/sneer/antlips/src/antlips/antFileGenerator/source-folders-separate.template
@@ -27,8 +27,8 @@
 	<target name="test-verification" if="junit.failures">
 		<echo>Test failures! Check the output for details.</echo>
 	</target>
-		
-	<target name="test-execution" depends="compile">
+
+	<target name="test-execution" depends="makejar">
 		<junit printsummary="true" failureproperty="junit.failures" fork="yes" timeout="60000">
 			<formatter type="xml"/>
 			<sysproperty key="java.awt.headless" value="${java.awt.headless}" />
@@ -65,6 +65,21 @@
 <%
 	}
 %>
+	</target>
+
+	<target name="makejar" depends="compile">
+		<delete dir="build" />
+		<mkdir  dir="build" />
+		<jar destfile="./build/sneer.jar">
+			<fileset dir="../sneer/bin">
+				<exclude name='**/*.txt' />
+				<exclude name='spikes/**' />
+				<exclude name='sneer/installer/**' />
+				<exclude name='build/**' />
+				<exclude name='TEST-*.txt' />
+				<exclude name='TEST-*.xml' />
+			</fileset>
+		</jar>
 	</target>
 
 	<target name="copy-resources" depends="init">
