--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -18,6 +18,7 @@
 	<classpathentry kind="lib" path="bricks/src/sneer/skin/main/dashboard/impl/lib/jxlayer.jar" sourcepath="bricks/src/sneer/skin/main/dashboard/impl/lib/jxlayer-src.zip" exported="true"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/pulp/tuples/impl/lib/prevayler-2.3.jar" sourcepath="bricks/src/sneer/pulp/tuples/impl/lib/prevayler-2.3-src.zip" exported="true"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/pulp/tuples/impl/lib/xstream-1.3.1.jar" sourcepath="bricks/src/sneer/pulp/tuples/impl/lib/xstream-1.3.1-src.zip" exported="true"/>
+	<classpathentry kind="lib" path="bricks/src/sneer/pulp/tuples/impl/lib/xpp3_min-1.1.4c.jar" exported="true"/>
 	<classpathentry kind="lib" path="bricks/src/snapps/whisper/speex/impl/lib/speex.jar"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/pulp/crypto/impl/lib/bcprov-jdk16-139.jar"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/software/code/compilers/java/impl/lib/compiler-7-ea-b17-02_aug_2007.jar"/>
