--- a/code/.classpath
+++ b/code/.classpath
@@ -13,7 +13,6 @@
 	<classpathentry kind="lib" path="commons/lib/jmock-2.5.1/jmock-2.5.1.jar" exported="true"/>
 	<classpathentry kind="lib" path="commons/lib/jmock-2.5.1/jmock-junit4-2.5.1.jar" exported="true"/>
 	<classpathentry kind="lib" path="commons/lib/junit-4.4.jar" sourcepath="commons/lib/junit-4.4-src.jar" exported="true"/>
-	<classpathentry kind="lib" path="commons/lib/collections-generic-4.01/collections-generic-4.01.jar" sourcepath="commons/lib/collections-generic-4.01/src/java" exported="true"/>
 
 	<classpathentry kind="lib" path="bricks/src/snapps/whisper/speex/impl/lib/speex.jar"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/skin/main/dashboard/impl/lib/jxlayer.jar" sourcepath="bricks/src/sneer/skin/main/dashboard/impl/lib/jxlayer-src.zip" exported="true"/>
@@ -24,6 +23,7 @@
 	<classpathentry kind="lib" path="bricks/src/sneer/software/code/compilers/java/impl/lib/compiler-7-ea-b17-02_aug_2007.jar"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/hardware/cpu/lang/impl/lib/commons-lang-2.3.jar" exported="true"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/hardware/io/impl/lib/commons-io-1.4.jar" sourcepath="bricks/src/sneer/hardware/io/lib/commons-io-1.4-src.zip" exported="true"/>
+	<classpathentry kind="lib" path="bricks/src/sneer/hardware/ram/collections/impl/lib/commons-collections-3.2.1.jar" sourcepath="bricks/src/sneer/hardware/ram/collections/impl/lib/commons-collections-3.2.1-src.zip" exported="true"/>
 
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="output" path="bin"/>
