antlips moved to a separate project

--- a/antlips/src/antlips/antFileGenerator/source-folders-separate.template
+++ b/antlips/src/antlips/antFileGenerator/source-folders-separate.template
@@ -71,7 +71,7 @@
 		<delete dir="build" />
 		<mkdir  dir="build" />
 		<jar destfile="./build/sneer.jar">
-			<fileset dir="../sneer/bin">
+			<fileset dir="../code/bin">
 				<exclude name='**/*.txt' />
 				<exclude name='spikes/**' />
 				<exclude name='sneer/installer/**' />
