--- a/spikes/.classpath
+++ b/spikes/.classpath
@@ -9,6 +9,6 @@
 	<classpathentry kind="lib" path="lib/junit-4.4.jar"/>
 	<classpathentry kind="lib" path="lib/javassist.jar"/>
 	<classpathentry kind="lib" path="lib/asm-all-3.1.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/code"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sneer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
