--- a/code/build.xml
+++ b/code/build.xml
@@ -21,7 +21,7 @@
 	</target>
 	
 	
-	<target name="testWithClover" depends="init-clover, compile, test-execution, test-verification, clover">
+	<target name="clover" depends="init-clover, compile, test-execution, test-verification, report-clover">
 		<antcall target="finalize"/>		
 	</target>
 	
@@ -96,28 +96,28 @@
 	</target>
 
 
-	<target name="clover-report" depends="init-clover, test-execution, clover"/>
-
 	<target name="init-clover">
+		<mkdir dir="clover"/>
+		<mkdir dir="clover/bin"/>
 		<taskdef resource="cloverlib.xml" classpath="${clover.jar}"/>
-		<clover-setup initString="mycoverage.db"/>
+		<clover-setup initString="clover/bin/mycoverage.db"/>
 	</target>
 
 
-	<target name="clover">
+	<target name="report-clover">
 		<fileset dir="." id="clover.sources">
 			<include name="src/**/*.java" />
 		</fileset>
 		
 		<clover-report>
-	       <current outfile="clover.xml">
+	       <current outfile="clover/clover.xml">
 	          <format type="xml"/>
 	       	  <fileset refid="clover.sources" />
 	       </current>
 	    </clover-report>
 		
 		<clover-report>
-	       <current outfile="clover">
+	       <current outfile="clover/html">
 	          <format type="html"/>
 	       	  <fileset refid="clover.sources" />
 	       </current>
