--- a/installer/build.xml
+++ b/installer/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="WebStart" default="main" basedir=".">
+<project name="Installer" default="main" basedir=".">
 
 	<property name="build.dir" location="build" />
 	<property name="bin.dir" location="build/bin" />
