Eclipse project structure installed by webstart.

--- a/code/build.xml
+++ b/code/build.xml
@@ -71,11 +71,17 @@
 		<delete file="build/dist"/>
 		<mkdir dir="build/dist"/>
 		<jar destfile="build/dist/sneer.jar">
-			<fileset dir="${bin.dir}">
-				<exclude name='**/*.txt' />
-				<exclude name='TEST-*.txt' />
-				<exclude name='TEST-*.xml' />
+			<fileset dir=".">
+				<include name='lib/**/*.jar' />
+				<include name='bin/**/*.*' />
+				<include name='src/**/*.*' />
+				<include name='.project' />
+				<include name='.classpath' />
+				<include name='.settings/**/*.*' />
+				<exclude name='**/TEST-*.txt' />
+				<exclude name='**/TEST-*.xml' />
 			</fileset>
+
 		</jar>
 	</target>
 
