Roadmap Item Done (Webstart - Send all files in project root).

--- a/code/build.xml
+++ b/code/build.xml
@@ -90,11 +90,10 @@
 		<mkdir dir="build/dist"/>
 		<jar destfile="build/dist/sneer.jar">
 			<fileset dir=".">
+				<include name='*.*' />
 				<include name='lib/**/*.jar' />
 				<include name='bin/**/*.*' />
 				<include name='src/**/*.*' />
-				<include name='.project' />
-				<include name='.classpath' />
 				<include name='.settings/**/*.*' />
 				<exclude name='**/TEST-*.txt' />
 				<exclude name='**/TEST-*.xml' />
