--- a/code/build.xml
+++ b/code/build.xml
@@ -28,6 +28,12 @@
 				<include name="*.jar" />
 			</fileset>
 		</path>
+		
+		<condition property="testability.jar.dir"
+			value="../../Sneer/workspace/code/build/dist" 
+			else="build/dist">
+			<equals arg1="${env.JOB_NAME}" arg2="Sneer-Clover"/>
+		</condition>
 			
 		<taskdef name="testability" classname="com.google.ant.TestabilityTask">
 			<classpath refid="testability.lib" />
@@ -35,7 +41,7 @@
 		
 		<testability resultfile="build/testability.xml" print="xml">
 			<classpath>
-				<fileset dir="build/dist/">
+				<fileset dir="${testability.jar.dir}">
 					<include name="sneer.jar" />
 				</fileset>
 			</classpath>
