--- a/code/build.xml
+++ b/code/build.xml
@@ -34,6 +34,14 @@
 			else="build/dist">
 			<equals arg1="${env.JOB_NAME}" arg2="Sneer-Clover"/>
 		</condition>
+		
+		<echo message="${testability.jar.dir}/sneer.jar"/>
+		<mkdir dir="build/dist"/>
+		<copy todir="build/dist">
+			<fileset dir="${testability.jar.dir}">
+				<include name='sneer.jar'/>
+			</fileset>
+		</copy>
 			
 		<taskdef name="testability" classname="com.google.ant.TestabilityTask">
 			<classpath refid="testability.lib" />
@@ -41,7 +49,7 @@
 		
 		<testability resultfile="build/testability.xml" print="xml">
 			<classpath>
-				<fileset dir="${testability.jar.dir}">
+				<fileset dir="build/dist">
 					<include name="sneer.jar" />
 				</fileset>
 			</classpath>
