--- a/code/build.xml
+++ b/code/build.xml
@@ -29,21 +29,17 @@
 			</fileset>
 		</path>
 		
-		<condition property="testability.jar.dir"
-			value="/root/.hudson/jobs/Sneer-Clover/workspace/code/build/dist" 
-			else="build/dist">
-			<equals arg1="${env.JOB_NAME}" arg2="Sneer-Clover"/>
-		</condition>
-		
-		<echo message="${testability.jar.dir}/sneer.jar"/>
-			
 		<taskdef name="testability" classname="com.google.ant.TestabilityTask">
 			<classpath refid="testability.lib" />
 		</taskdef>
 		
+		<mkdir dir="build/dist/"/>
 		<testability resultfile="build/testability.xml" print="xml">
 			<classpath>
-				<fileset dir="${testability.jar.dir}">
+				<fileset dir="/">
+					<include name="root/.hudson/jobs/Sneer/workspace/code/build/dist/sneer.jar" />
+				</fileset>
+				<fileset dir="build/dist/">
 					<include name="sneer.jar" />
 				</fileset>
 			</classpath>
