--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@ code/antlips.xml
 code/bin
 code/build
 code/.byecycle
-code/clover
-code/clover.xml
 snuggin/snuggin/bin
-webstart
+installer/clover.xml
+installer/clover
 installer/bin
 installer/build
 spikes/bin
